Fix button contrast.

--- a/public/styles.css
+++ b/public/styles.css
@@ -173,7 +173,7 @@ i {
 
 .about-button-container > a {
   text-decoration: none;
-  background-color: #a9cec2;
+  background-color: #5d727e;
   color: white;
   border: none;
   border-radius: 4px;
@@ -331,7 +331,7 @@ i {
 .button-container > a {
   cursor: pointer;
   border: none;
-  background-color: #a9cec2;
+  background-color: #5d727e;
   color: white;
   border-radius: 4px;
   margin: 10px;
